syntax = "proto3";
package io.carbynestack.amphora.common.grpc;

import "common.proto";

option java_multiple_files = true;

message GrpcMultiplicationExchangeObject{
  string operation_id = 1;
  int32 player_id = 2;
  repeated GrpcFactorPair factor_pair = 3;
}

message GrpcFactorPair{
  uint32 a = 1;
  uint32 b = 2;
}

service InterVcpService{
  rpc open(GrpcMultiplicationExchangeObject) returns(GrpcEmpty);
}